Finished part 2 incorrectly

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -61,6 +61,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#single and doc id of doc where it appears, 3 docs\n",
+    "sids = [('a',3),('a',2),('b',1),('b',2),('c',2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ha = sorted(filter(lambda sid: sid[0] == 'd', sids), key=lambda h: h[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    print([h for h in ha][0])\n",
+    "except:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
